# HQE-Workbench

./: .actionlint.yaml  .dependabot.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  2026-02-06 WORK SUMMARY.md  ABOUT.md  AGENTS.md  AUTHORS  BUILD.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  GEMINI.md  GOVERNANCE.md  LEGAL.md  LICENSE  NOTICE  PRIVACY.md  QWEN.md  README.md  REPOSITORY_HEALTH_REPORT.md  RESTRUCTURE_EXECUTION_LOG.md  RESTRUCTURE_FINAL_REPORT.md  RESTRUCTURE_PLAN_PHASE1.md  SECURITY.md  SECURITY_AND_BUG_FINDINGS.md  SECURITY_MEASURES.md  SECURITY_TESTING_PROCEDURES.md  SESSION_REPORT_2026-02-04.md  SUMMARY_FINDINGS.md  SUPPORT.md  TODO.md  TODO_UNIFIED.md  lychee.toml  mkdocs.yml  (+4 more)
.Jules/: palette.md
.cursor/: mcp.json
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security_advisory.yml
.github/workflows/: ci.yml  docs.yml  qwen-dispatch.yml  qwen-invoke.yml  qwen-review.yml  qwen-scheduled-triage.yml  qwen-triage.yml  release.yml  security.yml  stale.yml
.jules/: palette.md
.qwen/: PROJECT_SUMMARY.md
apps/workbench/: UI_RESKIN_SUMMARY.md  index.html  package-lock.json  package.json
apps/workbench/src/: App.tsx  index.css  types.ts
apps/workbench/src-tauri/: Cargo.toml  tauri.conf.json
cli/hqe/: Cargo.toml
cli/hqe/src/: main.rs
crates/hqe-artifacts/: Cargo.toml
crates/hqe-artifacts/src/: lib.rs
crates/hqe-core/: Cargo.toml
crates/hqe-core/src/: encrypted_db.rs  lib.rs  models.rs  persistence.rs  prompt_runner.rs  redaction.rs  repo.rs  repo.rs.bak  scan.rs  system_prompt.rs  system_prompt.rs.bak
crates/hqe-core/src/analytics/: mod.rs
crates/hqe-flow/: Cargo.toml
crates/hqe-flow/src/: engine.rs  lib.rs
crates/hqe-flow/tests/: flow_test.rs
crates/hqe-git/: Cargo.toml
crates/hqe-git/src/: lib.rs
crates/hqe-ingest/: Cargo.toml
crates/hqe-ingest/src/: lib.rs  loader.rs  watcher.rs
crates/hqe-ingest/tests/: integration_test.rs
crates/hqe-mcp/: Cargo.toml
crates/hqe-mcp/src/: lib.rs  loader.rs  registry.rs  registry_v2.rs
crates/hqe-openai/: Cargo.toml
crates/hqe-openai/src/: analysis.rs  lib.rs  profile.rs  prompts.rs  provider_discovery.rs  rate_limiter.rs
crates/hqe-openai/src/prefilled/: mod.rs
crates/hqe-protocol/: Cargo.toml
crates/hqe-protocol/src/: lib.rs  models.rs
crates/hqe-vector/: Cargo.toml
crates/hqe-vector/src/: lib.rs
desktop/workbench/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
desktop/workbench/src/: App.tsx  index.css  store.ts  types.ts
desktop/workbench/src-tauri/: Cargo.toml  tauri.conf.json
desktop/workbench/src-tauri/capabilities/: default.json
desktop/workbench/src-tauri/icons/: README.md
desktop/workbench/src-tauri/resources/: default_profiles.json
desktop/workbench/src-tauri/src/: chat.rs  commands.rs  lib.rs  llm.rs  prompts.rs
docs/: API.md  AUDIT_REPORT_2026-02-05.md  COMPREHENSIVE_TODO_AND_BUGS.md  DEEP_SCAN_RESULTS.md  DEVELOPMENT.md  HOW_TO.md  IMPLEMENTATION_SUMMARY.md  PHASE_1_IMPLEMENTATION_PLAN.md  PHASE_1_INVENTORY.md  PHASE_2F_COMPLETION_REPORT.md  PHASE_2F_VERIFICATION.md  PROMPTS_AUDIT.md  SECURITY_MODEL.md  architecture.md  architecture_v2.md  artifact-format.md  provider-config.md  tech-stack.md  threat-model.md
docs/work-summaries/: 2026-02-06 WORK SUMMARY.md
docs/work-summaries/consolidated-todos/: MCP_SERVER_TODOS.md  README.md  RUST_CODEBASE_TODOS.md  TECHNICAL_DEBT_TODOS.md
example-repo/: Dockerfile  README.md  RESULTS.md  SECURITY.md  SETUP.md  package.json  run_scan.py  server.js
example-repo/python-scan-results/: manifest.json
example-repo/scan-results-20260128-191250/: report.json  report.md
example-repo/src/models/: Post.js  User.js
examples/demo-repo/: API.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  TESTS.md  hqe_mock_refactored.sh  package-lock.json  package.json  run_scan.sh  venice.config
examples/demo-repo/python-scan-results/: report.md
examples/demo-repo/scan-results-20260128-191250/: manifest.json
examples/demo-repo/src/: auth.js
fixtures/topics/finance-demo/: manifest.yaml
hqe_workbench_provider_discovery/: Cargo.toml  README.md
hqe_workbench_provider_discovery/_inputs/: App.tsx  HQE Engineer v3.md  architecture.md  artifact-format.md  hqe-engineer.yaml  main.rs  provider-config.md
hqe_workbench_provider_discovery/crates/hqe-cli/: Cargo.toml
hqe_workbench_provider_discovery/crates/hqe-cli/src/: main.rs
hqe_workbench_provider_discovery/crates/hqe-openai/: Cargo.toml
hqe_workbench_provider_discovery/crates/hqe-openai/src/: lib.rs  profile.rs  provider_discovery.rs
hqe_workbench_provider_discovery/examples/: profiles.json
hqe_workbench_provider_discovery/frontend/: README.md
hqe_workbench_provider_discovery/src-tauri/: README.md
logs/: 2026-02-01_audit_summary.md  2026-02-01_branches_disposition.md  2026-02-01_ci_security_remediation.md  2026-02-01_pr_decision_log.md  README.md
mcp-server/: GENKIT.md  README.md
mcp-server/cli-prompt-library/: index.toml
mcp-server/cli-security/: AGENTS.md
mcp-server/conductor/: setup.toml
mcp-server/criticalthink/: criticalthink.toml
mcp-server/prompts/: .migration-log.md  AGENTS.md  README.md
mcp-server/prompts/hooks/: detect-skills.py  dev-sync.py  post-prompt-engine.py  prompt-suggest.py  setup.sh
mcp-server/prompts/scripts/: sync-to-cache.sh
prompts/: .migration-log.md  .refactor_inventory.md  code-review.toml
prompts/prompts/: .migration-log.md  MCP_SERVER_HANDBOOK.md
protocol/: README.md  VALIDATORS.md  hqe-engineer-schema.json  hqe-engineer.yaml  hqe-schema.json  validate.py  verify.py
protocol/archive/: HQE Engineer v2.md  HQE Engineer.md  hqe-engineer-v3.1.0.yaml  hqe-engineer-v4.2.0.yaml  hqe-engineer-v4.2.1.yaml  verify.hs
scripts/: bootstrap_macos.sh  build_dmg.sh  dev.sh  make_source_zip.sh  validate_protocol.sh  verify_invariants.sh
todos/: AGENTS.md  README.md  UNIFIED.md
(+141 files in other folders)
