[package]
name = "hqe-artifacts"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "Report and manifest generation for HQE"

[dependencies]
# Core
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

# HQE internal
hqe-core = { workspace = true }

# Markdown
pulldown-cmark = "0.13"
pulldown-cmark-to-cmark = "22.0"

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = "0.4"
