[package]
name = "hqe-flow"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
hqe-protocol = { path = "../hqe-protocol" }
hqe-mcp = { path = "../hqe-mcp" }