[package]
name = "hqe-git"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "Git operations for HQE Workbench"

[dependencies]
# Core
tokio = { workspace = true, features = ["process"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

# Async
async-trait = { workspace = true }

# Filesystem
tempfile = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = { workspace = true }
