[package]
name = "hqe-mcp"
version.workspace = true
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.9"
walkdir = "2.4"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
jsonschema = "0.41"
async-trait = "0.1"
thiserror = { workspace = true }
hqe-protocol = { path = "../hqe-protocol" }

[dev-dependencies]
tempfile = "3"
