[package]
name = "hqe-workbench-app"
version = "0.1.0"
description = "HQE Workbench Tauri App"
authors = ["Faye Håkansdotter"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
secrecy = { version = "0.8", features = ["serde"] }
url = { version = "2.5", features = ["serde"] }
dirs = "5.0"
hqe-git = { path = "../../../crates/hqe-git" }

# HQE Crates
hqe-core = { path = "../../../crates/hqe-core" }
hqe-artifacts = { path = "../../../crates/hqe-artifacts" }
hqe-openai = { path = "../../../crates/hqe-openai" }
hqe-protocol = { path = "../../../crates/hqe-protocol" }
hqe-ingest = { path = "../../../crates/hqe-ingest" }
hqe-mcp = { path = "../../../crates/hqe-mcp" }
hqe-flow = { path = "../../../crates/hqe-flow" }
