[package]
name = "hqe-openai"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
url = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
keyring = "2"
dirs = "5"
